Added "Delete Latest Waypoint" button

--- a/templates/AINavigation.html
+++ b/templates/AINavigation.html
@@ -50,7 +50,8 @@
                 </tr>
                 <tr>
                     <th>Target coordinates</th>
-                    <th>Distance</th>
+                    <!--<th>Distance</th>-->
+                    <th><input type="button" ng-click="deleteLatestWaypoint()" value="Delete Latest Waypoint"></th>
                 </tr>
 
                 <tr ng-repeat="waypoint in waypoints">
@@ -61,8 +62,8 @@
         </coord-display>
         <enter-coord>
             <form>
-                <input type="number" id="waypointNewLongitude" name="waypointNew" placeholder="Enter New Longitude:"><br>
                 <input type="number" id="waypointNewLatitude" name="waypointNew" placeholder="Enter New Latitude:"><br>
+                <input type="number" id="waypointNewLongitude" name="waypointNew" placeholder="Enter New Longitude:"><br>
                 <input type="submit" ng-click="waypointNew()" value="Submit" id="submit-button"><br>
             </form>
         </enter-coord>
