Added mock current coordinates

--- a/templates/AINavigation.html
+++ b/templates/AINavigation.html
@@ -46,7 +46,7 @@
             <table>
                 <tr>
                     <td>Current Coordinates:</td>
-                    <td>Latitude: &nbsp;&nbsp; Longitude: &nbsp;&nbsp;</td>
+                    <td>{{ '{{curr_coord.lat}}' }}  &nbsp;&nbsp; {{ '{{curr_coord.long}}' }}</td>
                 </tr>
                 <tr>
                     <th>Target coordinates</th>
