--- a/templates/AINavigation.html
+++ b/templates/AINavigation.html
@@ -30,13 +30,19 @@
     </div>
     
     <div class="ainav">
-        <map > MAP <br>
-            <div style="position:relative">
+
+        <map> MAP <br>
+            <div id="map" style="position:relative">
             <panzoomwidget panzoom-id="PanZoom" style="position:absolute;top:10px;left:10px;z-index:1"></panzoomwidget>
                 <panzoom id="PanZoom" config="panzoomConfig" model="panzoomModel" style="width:100%; height: 550px">
-                    <img src="https://raw.githubusercontent.com/mvindahl/angular-pan-zoom/master/demo/images/shark_attack.jpg" style="position:absolute" />
+                    <!-- <img src="https://raw.githubusercontent.com/mvindahl/angular-pan-zoom/master/demo/images/shark_attack.jpg" style="position:absolute" /> -->
                     <svg style="position:absolute" width="100%" height="550px">
-                        some
+                       <div ng-repeat="point in waypoints" ng-attr-x="{{ '{{point.x_pos}}' }}" ng-attr-y="{{ '{{point.y_pos}}' }}" ng-attr-width="10" ng-attr-height="10" rx="10" ry="10" style="fill:red;stroke-width:2;stroke:rgb(255,0,0)">
+
+                            <img src="{{ url_for('static', filename='imgs/pin.svg') }}" width="30" height="30"><br>
+                           {{ '{{point.x_pos}}' }}, {{ '{{point.long}}' }}
+
+                       </div> 
                     </svg>
                 </panzoom>
             </div>
