--- a/static/css/UIStyleSheet.css
+++ b/static/css/UIStyleSheet.css
@@ -100,6 +100,7 @@ h1 {
     grid-column: 2 / span 2; 
     border: 2px solid black;
     padding: 5px;
+    overflow-y: scroll;
 }
 
 .ainav enter-coord{
@@ -114,6 +115,8 @@ h1 {
     grid-row: 4;
     grid-column: 1 / 3;
     border: 2px solid black;
+    white-space: pre-line;
+    overflow-y: scroll;
 }
 
 .erdm {
