--- a/templates/AINavigation.html
+++ b/templates/AINavigation.html
@@ -37,9 +37,12 @@
                 <panzoom id="PanZoom" config="panzoomConfig" model="panzoomModel" style="width:100%; height: 550px">
                     <!-- <img src="https://raw.githubusercontent.com/mvindahl/angular-pan-zoom/master/demo/images/shark_attack.jpg" style="position:absolute" /> -->
                     <svg style="position:absolute" width="100%" height="550px">
-                       <div ng-repeat="point in waypoints" ng-attr-x="{{ '{{point.x_pos}}' }}" ng-attr-y="{{ '{{point.y_pos}}' }}" ng-attr-width="10" ng-attr-height="10" rx="10" ry="10" style="fill:red;stroke-width:2;stroke:rgb(255,0,0)">
+                       <div id="{{ '{{point.index}}' }}" ng-repeat="point in waypoints" ng-attr-x="{{ '{{point.x_pos}}' }}" ng-attr-y="{{ '{{point.y_pos}}' }}" ng-attr-width="10" ng-attr-height="10" rx="10" ry="10" style="fill:red;stroke-width:2;stroke:rgb(255,0,0)">
 
-                            <img src="{{ url_for('static', filename='imgs/pin.svg') }}" width="30" height="30"><br>
+                        <img src="{{ url_for('static', filename='imgs/pin.svg') }}" width="30" height="30"><br>
+
+                           
+                           Waypoint: <!-- {{ '{{point.lat}}' }}, {{ '{{point.long}}' }} -->
                            {{ '{{point.x_pos}}' }}, {{ '{{point.long}}' }}
 
                        </div> 
@@ -52,24 +55,23 @@
             <table>
                 <tr>
                     <td>Current Coordinates:</td>
-                    <td>{{ '{{curr_coord.lat}}' }}  &nbsp;&nbsp; {{ '{{curr_coord.long}}' }}</td>
+                    <td>Latitude: &nbsp;&nbsp; Longitude: &nbsp;&nbsp;</td>
                 </tr>
                 <tr>
                     <th>Target coordinates</th>
-                    <!--<th>Distance</th>-->
-                    <th><input type="button" ng-click="deleteLatestWaypoint()" value="Delete Latest Waypoint"></th>
+                    <th>Distance</th>
                 </tr>
 
                 <tr ng-repeat="waypoint in waypoints">
-                    <td> {{ '{{waypoint.lat}}' }} &nbsp;&nbsp; {{ '{{waypoint.long}}' }} &nbsp;&nbsp;</td>
+                    <td>{{ '{{waypoint.lat}}' }} &nbsp;&nbsp; {{ '{{waypoint.long}}' }} &nbsp;&nbsp;</td>
                 </tr>
 
             </table>
         </coord-display>
         <enter-coord>
             <form>
-                <input type="text" id="waypointNewLatitude" pattern="^\d*(\.\d*)?$" name="waypointNew" placeholder="Enter New Latitude:"><br>
-                <input type="text" id="waypointNewLongitude" pattern="^\d*(\.\d*)?$" name="waypointNew" placeholder="Enter New Longitude:"><br>
+                <input type="number" id="waypointNewLongitude" name="waypointNew" placeholder="Enter New Longitude:"><br>
+                <input type="number" id="waypointNewLatitude" name="waypointNew" placeholder="Enter New Latitude:"><br>
                 <input type="submit" ng-click="waypointNew()" value="Submit" id="submit-button"><br>
             </form>
         </enter-coord>
