--- a/templates/AINavigation.html
+++ b/templates/AINavigation.html
@@ -42,8 +42,7 @@
                         <img src="{{ url_for('static', filename='imgs/pin.svg') }}" width="30" height="30"><br>
 
                            
-                           Waypoint: <!-- {{ '{{point.lat}}' }}, {{ '{{point.long}}' }} -->
-                           {{ '{{point.x_pos}}' }}, {{ '{{point.long}}' }}
+                           W here
 
                        </div> 
                     </svg>
