--- a/templates/AINavigation.html
+++ b/templates/AINavigation.html
@@ -48,11 +48,12 @@
             <table>
                 <tr>
                     <td>Current Coordinates:</td>
-                    <td>Latitude: &nbsp;&nbsp; Longitude: &nbsp;&nbsp;</td>
+                <td>{{ '{{curr_coord.lat}}' }} &nbsp;&nbsp; {{ '{{curr_coord.long}}' }}</td>
                 </tr>
                 <tr>
                     <th>Target coordinates</th>
-                    <th>Distance</th>
+                    <!--<th>Distance</th>-->
+                    <input type="button" ng-click="deleteLatestWaypoint()" value="Delete Latest Waypoint">
                 </tr>
 
                 <tr ng-repeat="waypoint in waypoints">
