--- a/templates/AINavigation.html
+++ b/templates/AINavigation.html
@@ -32,12 +32,13 @@
     <div class="ainav">
 
         <map> MAP <br>
-            <div id="map" style="background-color:#DEB887; position:relative">
+            <div style="background-color:#DEB887; position:relative">
             <panzoomwidget panzoom-id="PanZoom" style="background-color:#DEB887; position:absolute;top:10px;left:10px;z-index:1"></panzoomwidget>
                 <panzoom id="PanZoom" config="panzoomConfig" model="panzoomModel" style="background-color:#DEB887; width:100%; height: 550px">
-                    <svg style="position:absolute;" width="100%" height="550px">
+                    <svg id="map" style="position:absolute;" width="100%" height="550px">
                        <div ng-repeat="point in waypoints" ng-attr-x="{{ '{{point.x_pos}}' }}" ng-attr-y="{{ '{{point.y_pos}}' }}" ng-attr-width="10" ng-attr-height="10" rx="10" ry="10" style="fill:red;stroke-width:2;stroke:rgb(255,0,0)">
-                        <img ng-attr-id="{{ '{{point.index}}' }}" src="{{ url_for('static', filename='imgs/pin.svg') }}" width="30" height="30"><br>
+                        <img ng-attr-id="{{ '{{point.index}}' }}" src="{{ url_for('static', filename='imgs/pin.svg') }}" width="1" height="1"><br>
+
                        </div> 
                     </svg>
                 </panzoom>
