--- a/templates/Cameras.html
+++ b/templates/Cameras.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet"
           href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/UIStyleSheet.css') }}">
-    <link rel = "stylesheet" href="{{ url_for('static', filename='css/panzoomwidget.css') }}">
     <style type="text/css">
         .pan-zoom-frame {
             border: 2px solid black;
@@ -18,15 +17,12 @@
     <script src="https://code.angularjs.org/1.3.13/angular.min.js"></script>
     <script src="http://monospaced.github.io/angular-mousewheel/mousewheel.js"></script>
 
-    <script type="text/javascript" src="{{ url_for('static', filename='directives/panzoom.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='services/PanZoomService.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='directives/panzoomwidget.js') }}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.js"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='controllers/cameras.controller.js') }}"></script>  <!-- Change this accordingly as we update the js controller -->
+    <script type="text/javascript" src="{{ url_for('static', filename='controllers/Cameras.controller.js') }}"></script>  <!-- Change this accordingly as we update the js controller -->
 </head>
 <body ng-controller="camerasController">  <!-- set name of the controller to the camerasController -->
     <div class="topnav">
@@ -35,54 +31,24 @@
     </div>
 
     <div class="cameras">
-        
 
-        <map> MAP <br>
-            <div id="map" style="background-color:#DEB887; position:relative">
-            <panzoomwidget panzoom-id="PanZoom" style="background-color:#DEB887; position:absolute;top:10px;left:10px;z-index:1"></panzoomwidget>
-                <panzoom id="PanZoom" config="panzoomConfig" model="panzoomModel" style="background-color:#DEB887; width:100%; height: 550px">
-                    <svg id="map" style="position:absolute;" width="100%" height="550px">
-                        <div ng-repeat="point in waypoints" ng-attr-x="{{ '{{point.x_pos}}' }}" ng-attr-y="{{ '{{point.y_pos}}' }}" ng-attr-width="10" ng-attr-height="10" rx="10" ry="10" style="fill:red;stroke-width:2;stroke:rgb(255,0,0)">
-                            <img ng-attr-id="{{ '{{point.index}}' }}" src="{{ url_for('static', filename='imgs/pin.svg') }}" width="1" height="1"><br>
-
-                        </div>
-                    </svg>
-                </panzoom>
-            </div>
-        </map>
-
-        <!--Coord-display will be a big table that includes current coord on top, and target coords and distance as two columns below-->
-        <coord-display>
+        <!--camera-display will be a big table that includes all of the camera view IP addresses that can be selected to view-->
+        <camera-display>
             <table>
                 <tr>
-                    <td>Current Coordinates:</td>
-                    <td>{{ '{{curr_coord.lat}}' }}  &nbsp;&nbsp; {{ '{{curr_coord.long}}' }}</td>
+                    <td>Current Cameras:</td>  <!-- will display a list of all of the camera IP addresses that we have entered -->
+                    <td></td>
                 </tr>
-                <tr>
-                    <th>Target coordinates</th>
-                    <!--<th>Distance</th>-->
-                    <th><input type="button" ng-click="deleteLatestWaypoint()" value="Delete Latest Waypoint"></th>
-                </tr>
-
-                <tr ng-repeat="waypoint in waypoints">
-                    <td> {{ '{{waypoint.lat}}' }} &nbsp;&nbsp; {{ '{{waypoint.long}}' }} &nbsp;&nbsp;</td>
-                </tr>
-
                 
             </table>
-        </coord-display>
-        <enter-coord>
-            <form>
-                <input type="text" id="waypointNewLatitude" pattern="^\d*(\.\d*)?$" name="waypointNew" placeholder="Enter New Latitude:"><br>
-                <input type="text" id="waypointNewLongitude" pattern="^\d*(\.\d*)?$" name="waypointNew" placeholder="Enter New Longitude:"><br>
-                <input type="submit" ng-click="waypointNew()" value="Submit" id="submit-button"><br>
-            </form>
-        </enter-coord>
+        </camera-display>
         
         <form ng-submit="cameraIP()">
             <!--<input type="text" id="cameraIP" name="cameraIP" placeholder="Add Camera IP Address:">
         <input type="submit" value="Submit" id="submit-button">-->
         </form><div></div>
+
+        <input class="delete-camera-button" type="button" ng-click="removeLatestCamera()" value="Remove Latest Camera IP" />
         
         <div></div>
         <notification-bar id="notification-bar"><div id="notices">{{ '{{notifications}}' }}</div></notification-bar>
