--- a/static/css/UIStyleSheet.css
+++ b/static/css/UIStyleSheet.css
@@ -161,6 +161,39 @@ h1 {
     grid-row: 4;
     grid-column: 1 / 3;
     border: 2px solid black;
+    white-space: pre-line;
+    overflow-y: scroll;
+}
+
+.cameras {
+    display: grid;
+    padding: 5px 5px;
+    row-gap: 10px;
+    grid-template-columns: 50% 25% 25%;
+    grid-template-rows: 450px 100px 50px 150px;
+
+}
+
+.cameras notification-bar {
+    background-color: whitesmoke;
+    grid-row: 4;
+    grid-column: 1 / 3;
+    border: 2px solid black;
+    white-space: pre-line;
+    overflow-y: scroll;
+}
+
+/* big table with list of camera IPs */
+.cameras camera-display{
+    grid-row: 1;
+    grid-column: 2 / span 2; 
+    border: 2px solid black;
+    padding: 5px;
+    overflow-y: scroll;
+}
+
+.cameras remove-camera-button{
+
 }
 
 #emergency-stop {
