--- a/templates/Cameras.html
+++ b/templates/Cameras.html
@@ -48,7 +48,7 @@
         <input type="submit" value="Submit" id="submit-button">-->
         </form><div></div>
 
-        <input class="delete-camera-button" type="button" ng-click="removeLatestCamera()" value="Remove Latest Camera IP" />
+        <input class="remove-camera-button" type="button" ng-click="removeLatestCamera()" value="Remove Latest Camera IP" />
         
         <div></div>
         <notification-bar id="notification-bar"><div id="notices">{{ '{{notifications}}' }}</div></notification-bar>
