Basic Maintenance HTML done. Has functioning and custom range sliders.  Range of numbers will need to be determined. Reset needs functionality in controller.

--- a/templates/Cameras.html
+++ b/templates/Cameras.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
-<html ng-app="ERDM">
+<html ng-app="cameras">
 <head>
     <meta charset="utf-8" />
     <title>Centralized Dashboard - Cameras</title>
