--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -22,7 +22,7 @@
     <br>
     <div class="homepage-button-container">
         <div class="homepage-button">
-            <input class="hp-button" type="button" ng-click="Science()" value="Science" />
+            <input class="hp-button" type="button" ng-click="Cameras()" value="Cameras" />
         </div>
 
         <div class="homepage-button">
@@ -32,10 +32,6 @@
         <div class="homepage-button">
             <input class="hp-button" type="button" ng-click="ERDM()" value="ERDM" />
         </div>
-
-        <div class="homepage-button">
-            <input class="hp-button" type="button" ng-click="EquipmentServicing()" value="Equipment Servicing" />
-         </div>
 
         <div class="homepage-button">
             <input class="hp-button" type="button" ng-click="Maintenance()" value="Maintenance" />
