--- a/static/css/UIStyleSheet.css
+++ b/static/css/UIStyleSheet.css
@@ -74,7 +74,7 @@ h1 {
 .ainav {
     display: grid;
     padding: 5px 5px;
-    row-gap: 10px;
+    grid-row-gap: 10px;
     grid-template-columns: 50% 25% 25%;
     grid-template-rows: 450px 100px 50px 150px;
 
@@ -122,7 +122,7 @@ h1 {
 .erdm {
     display: grid;
     padding: 5px 5px;
-    row-gap: 10px;
+    grid-row-gap: 10px;
     grid-template-columns: 50% 25% 25%;
     grid-template-rows: 450px 100px 50px 150px;
 }
@@ -168,7 +168,7 @@ h1 {
 .cameras {
     display: grid;
     padding: 5px 5px;
-    row-gap: 10px;
+    grid-row-gap: 10px;
     grid-template-columns: 50% 25% 25%;
     grid-template-rows: 450px 100px 50px 150px;
 
@@ -196,17 +196,102 @@ h1 {
 
 }
 
+.maintenance {
+    display: grid;
+    padding: 5px 5px;
+    margin: auto 30px auto 50px;
+    grid-row-gap: 50px;
+    grid-template-columns: auto auto auto auto auto auto auto;
+    grid-template-rows: 225px 225px 100px 100px;
+}
+
+.maintenance sliderSection{
+    padding: 10px 10px;
+}
+
+.maintenance notification-bar {
+        background-color: whitesmoke;
+        grid-row: 3 / 4;
+        grid-column: 1 / 6;
+        border: 2px solid black;
+        white-space: pre-line;
+        overflow-y: scroll;
+}
+
+.slider {
+    -webkit-appearance: none;
+    width:100%;
+    height:20px;
+    outline: 1px solid black;
+    transform: rotate(-90deg) translate(-50%, -50%);
+    transform-origin: 50% 50%;
+}
+
+.slider:hover {
+    opacity: 1;
+}
+
+/* This is the slider handle CSS*/
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    /*appearance: none;*/
+    width: 20px;
+    height: 30px;
+    border: none;
+    background: #191970;
+}
+
+.slider::after{
+    content: "100";
+    color: black;
+    font-size: 15px;
+    font-weight: 600;
+    position: absolute;
+    left: 100%;
+    top: 5%;
+    transform:rotate(90deg);
+}
+
+.slider::before {
+    content: "1";
+    color: black;
+    font-size: 15px;
+    font-weight: 600;
+    position: absolute;
+    right: 93%;
+    top: auto;
+    transform: rotate(90deg);
+}
+
+.number{
+    background-color: honeydew;
+    height:30px;
+    width:50px;
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    font-size: 15px;
+    letter-spacing: 1px;
+}
+
 #emergency-stop {
     border-radius: 25px;
+    border: 2px solid black;
     background-color: red;
     text-align: center;
     padding: 10px 0;
     max-height: 50px;
+    font-weight:bold;
 }
 
 #reset-button {
+    border-radius: 25px;
+    border: 2px solid black;
     background-color: orange;
     text-align: center;
+    padding: 10px 0;
+    max-height: 50px;
+    font-weight: bold;
 }
 
 #go-button {
