--- a/templates/Maintenance.html
+++ b/templates/Maintenance.html
@@ -19,16 +19,83 @@
         <pageName href="#pageName">Maintenance</pageName>
         <homepage ng-click="homepage()" href="#home">Homepage</homepage>
     </div>
+    
+    <div class="maintenance">
+        <!--This is the slider bar grid that contains all the slider bars. This is used for orientation purposes-->
+        <!--TODO: connect numbets to slider values (controller)-->
+        <sliderSection>
+            <input type="range" min="1" max="100" value="50" class="slider" id="wheel1"> <br />
+            <strong>Wheel 1</strong>
+            <div class="number" id="wheel1_val"></div>
+        </sliderSection>
+        <sliderSection>
+            <input type="range" min="1" max="100" value="50" class="slider" id="wheel2"><br />
+            <strong>Wheel 2</strong>
+            <div class="number" id="wheel2_val"></div>
+        </sliderSection>
+        <sliderSection>
+            <input type="range" min="1" max="100" value="50" class="slider" id="wheel3"><br />
+            <strong>Wheel 3</strong>
+            <div class="number" id="wheel3_val"></div>
+        </sliderSection>
+        <sliderSection>
+            <input type="range" min="1" max="100" value="50" class="slider" id="wheel4"><br />
+            <strong>Wheel 4</strong>
+            <div class="number" id="wheel4_val"></div>
+        </sliderSection>
+        <sliderSection>
+            <input type="range" min="1" max="100" value="50" class="slider" id="wheel5"><br />
+            <strong>Wheel 5</strong>
+            <div class="number" id="wheel5_val"></div>
+        </sliderSection>
+        <sliderSection>
+            <input type="range" min="1" max="100" value="50" class="slider" id="wheel6"><br />
+            <strong>Wheel 6</strong>
+            <div class="number" id="wheel6_val"></div>
+        </sliderSection>
+        <div></div> <!--This is simply a divider to create a new row for the arms-->
+        <sliderSection>
+            <input type="range" min="1" max="100" value="50" class="slider" id="arm1"><br />
+            <strong>Arm 1</strong>
+            <div class="number" id="arm1_val"></div>
+        </sliderSection>
+        <sliderSection>
+            <input type="range" min="1" max="100" value="50" class="slider" id="arm2"><br />
+            <strong>Arm 2</strong>
+            <div class="number" id="arm2_val"></div>
+        </sliderSection>
+        <sliderSection>
+            <input type="range" min="1" max="100" value="50" class="slider" id="arm3"><br />
+            <strong>Arm 3</strong>
+            <div class="number" id="arm3_val"></div>
+        </sliderSection>
+        <sliderSection>
+            <input type="range" min="1" max="100" value="50" class="slider" id="arm4"><br />
+            <strong>Arm 4</strong>
+            <div class="number" id="arm4_val"></div>
+        </sliderSection>
+        <sliderSection>
+            <input type="range" min="1" max="100" value="50" class="slider" id="arm5"><br />
+            <strong>Arm 5</strong>
+            <div class="number" id="arm5_val"></div>
+        </sliderSection>
+        <sliderSection>
+            <input type="range" min="1" max="100" value="50" class="slider" id="arm6"><br />
+            <strong>Arm 6</strong>
+            <div class="number" id="arm6_val"></div>
+        </sliderSection>
+        <sliderSection>
+            <input type="range" min="1" max="100" value="50" class="slider" id="arm7"><br />
+            <strong>Arm 7</strong>
+            <div class="number" id="arm7_val"></div>
+        </sliderSection>
 
-    <div class = "maintenance">
-
-        <form ng-submit="cameraIP()">
-            <!-- <input type="text" id="cameraIP" name="cameraIP" placeholder="Add Camera IP Address:">
-        <input type="submit" value="Submit" id="submit-button">-->
-        </form><div></div>
-
-        <div id="reset-button" ng-click="resetButton()">RESET</div>
+        <!--The notification bar gets updated by the controller -->
         <notification-bar id="notification-bar"><div id="notices">{{ '{{notifications}}' }}</div></notification-bar>
+        <!--Adding in the reset button-->
+        <div id="reset-button" ng-click="resetButton()">RESET</div>
         <div id="emergency-stop" ng-click="eStopButton()">STOP</div>
+    </div>
+
 </body>
 </html>
