--- a/static/css/UIStyleSheet.css
+++ b/static/css/UIStyleSheet.css
@@ -185,15 +185,20 @@ h1 {
 
 /* big table with list of camera IPs */
 .cameras camera-display{
-    grid-row: 1;
-    grid-column: 2 / span 2; 
+    grid-row: 1/3;
+    grid-column: 1 / span 2; 
     border: 2px solid black;
     padding: 5px;
     overflow-y: scroll;
 }
 
 .cameras remove-camera-button{
+    
+}
 
+.cameras emergency-stop {
+    grid-row: 4;
+    grid-column: 4;
 }
 
 .maintenance {
