Added Maintenance Reset functionality. We could make the "zero value" a constant somewhere? Adjusted the Cameras controllers and app names so that the controller is properly connected to the html.

--- a/templates/Cameras.html
+++ b/templates/Cameras.html
@@ -24,7 +24,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.js"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='controllers/Cameras.controller.js') }}"></script>  <!-- Change this accordingly as we update the js controller -->
 </head>
-<body ng-controller="camerasController">  <!-- set name of the controller to the camerasController -->
+<body ng-controller="CamerasController">  <!-- set name of the controller to the CamerasController -->
     <div class="topnav">
         <pageName href="#pageName">Camera Views</pageName>
         <homepage ng-click="homepage()" href="#home">Homepage</homepage>
