Something trivial to make sure everyone has most up to date code

--- a/templates/AINavigation.html
+++ b/templates/AINavigation.html
@@ -44,7 +44,7 @@
                 </panzoom>
             </div>
         </map>
-        <!--Coord-display will be a big table that includes current coord on top, and target coords and distance as two columns below -->
+        <!--Coord-display will be a big table that includes current coord on top, and target coords and distance as two columns below; -->
         <coord-display>
             <table>
                 <tr>
