Trivial changes to try to make real changes available to everyone.

--- a/templates/Maintenance.html
+++ b/templates/Maintenance.html
@@ -22,7 +22,7 @@
     
     <div class="maintenance">
         <!--This is the slider bar grid that contains all the slider bars. This is used for orientation purposes-->
-        <!--TODO: connect numbets to slider values (controller)-->
+        <!--TODO: connect numbets to slider values (controller);-->
         <sliderSection>
             <input type="range" min="1" max="100" value="50" class="slider" id="wheel1"> <br />
             <strong>Wheel 1</strong>
