--- a/templates/Cameras.html
+++ b/templates/Cameras.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html ng-app="cameras">
 <head>
@@ -22,9 +22,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.js"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='controllers/Cameras.controller.js') }}"></script>  <!-- Change this accordingly as we update the js controller -->
+    <script type="text/javascript" src="{{ url_for('static', filename='controllers/Cameras.controller.js') }}"></script> 
 </head>
-<body ng-controller="CamerasController">  <!-- set name of the controller to the CamerasController -->
+<body ng-controller="CamerasController">
     <div class="topnav">
         <pageName href="#pageName">Camera Views</pageName>
         <homepage ng-click="homepage()" href="#home">Homepage</homepage>
@@ -36,23 +36,21 @@
         <camera-display>
             <table>
                 <tr>
-                    <td>Current Cameras:</td>  <!-- will display a list of all of the camera IP addresses that we have entered -->
+                    <td>Current Cameras:</td>
                     <td></td>
                 </tr>
-                <tr ng-repeat="cameraIPadd in cameraIPs">
-                    <td>{{ '{{cameraIPadd}}' }} &nbsp;&nbsp;</td>  <!-- supposed to loop and display each cameraIP -->
+                <tr ng-repeat="ip in cameraIPs">
+                    <td>{{ '{{ip}}' }} &nbsp;&nbsp;</td>
                 </tr>
                 
             </table>
         </camera-display>
         
         <form ng-submit="cameraIP()">
-            <!--<input type="text" id="cameraIP" name="cameraIP" placeholder="Add Camera IP Address:">
-        <input type="submit" value="Submit" id="submit-button">-->
         </form><div></div>
         <enter-cameraIP>  <!-- Setup for us to enter new camera IP address -->
             <form>
-                <input type="number" id="cameraNewIP" name="cameraNew" placeholder="Enter New IP:"><br>  <!-- input for the camera IP.  May need to change type-->
+                <input id="cameraNewIP" name="cameraNew" placeholder="Enter New IP:"><br>  <!-- input for the camera IP.  May need to change type-->
                 <input type="submit" ng-click="addIP()" value="Submit" id="submit-button"><br>
             </form>
         </enter-cameraIP>
