Added FE BE JS code for Maintenance page

--- a/templates/Maintenance.html
+++ b/templates/Maintenance.html
@@ -24,68 +24,68 @@
         <!--This is the slider bar grid that contains all the slider bars. This is used for orientation purposes-->
         <!--TODO: connect numbets to slider values (controller);-->
         <sliderSection>
-            <input type="range" min="-10" max="10" value="0" class="slider" id="wheel1"> <br />
+            <input type="range" min="-10" max="10" value="0" class="slider" id="wheel1" ng-model="wheel1" ng-change="wheelChange()"> <br />
             <strong>Wheel 1</strong>
             <div class="number" id="wheel1_val"></div>
         </sliderSection>
         <sliderSection>
-            <input type="range" min="-10" max="10" value="0" class="slider" id="wheel2"><br />
+            <input type="range" min="-10" max="10" value="0" class="slider" id="wheel2" ng-model="wheel2" ng-change="wheelChange()"><br />
             <strong>Wheel 2</strong>
             <div class="number" id="wheel2_val"></div>
         </sliderSection>
         <sliderSection>
-            <input type="range" min="-10" max="10" value="0" class="slider" id="wheel3"><br />
+            <input type="range" min="-10" max="10" value="0" class="slider" id="wheel3" ng-model="wheel3" ng-change="wheelChange()"><br />
             <strong>Wheel 3</strong>
             <div class="number" id="wheel3_val"></div>
         </sliderSection>
         <sliderSection>
-            <input type="range" min="-10" max="10" value="0" class="slider" id="wheel4"><br />
+            <input type="range" min="-10" max="10" value="0" class="slider" id="wheel4" ng-model="wheel4" ng-change="wheelChange()"><br />
             <strong>Wheel 4</strong>
             <div class="number" id="wheel4_val"></div>
         </sliderSection>
         <sliderSection>
-            <input type="range" min="-10" max="10" value="0" class="slider" id="wheel5"><br />
+            <input type="range" min="-10" max="10" value="0" class="slider" id="wheel5" ng-model="wheel5" ng-change="wheelChange()"><br />
             <strong>Wheel 5</strong>
             <div class="number" id="wheel5_val"></div>
         </sliderSection>
         <sliderSection>
-            <input type="range" min="-10" max="10" value="0" class="slider" id="wheel6"><br />
+            <input type="range" min="-10" max="10" value="0" class="slider" id="wheel6" ng-model="wheel6" ng-change="wheelChange()"><br />
             <strong>Wheel 6</strong>
             <div class="number" id="wheel6_val"></div>
         </sliderSection>
         <div></div> <!--This is simply a divider to create a new row for the arms-->
         <sliderSection>
-            <input type="range" min="-10" max="10" value="0" class="slider" id="arm1"><br />
+            <input type="range" min="-10" max="10" value="0" class="slider" id="arm1" ng-model="arm1" ng-change="armChange()"><br />
             <strong>Arm 1</strong>
             <div class="number" id="arm1_val"></div>
         </sliderSection>
         <sliderSection>
-            <input type="range" min="-10" max="10" value="0" class="slider" id="arm2"><br />
+            <input type="range" min="-10" max="10" value="0" class="slider" id="arm2" ng-model="arm2" ng-change="armChange()"><br />
             <strong>Arm 2</strong>
             <div class="number" id="arm2_val"></div>
         </sliderSection>
         <sliderSection>
-            <input type="range" min="-10" max="10" value="0" class="slider" id="arm3"><br />
+            <input type="range" min="-10" max="10" value="0" class="slider" id="arm3" ng-model="arm3" ng-change="armChange()"><br />
             <strong>Arm 3</strong>
             <div class="number" id="arm3_val"></div>
         </sliderSection>
         <sliderSection>
-            <input type="range" min="-10" max="10" value="0" class="slider" id="arm4"><br />
+            <input type="range" min="-10" max="10" value="0" class="slider" id="arm4" ng-model="arm4" ng-change="armChange()"><br />
             <strong>Arm 4</strong>
             <div class="number" id="arm4_val"></div>
         </sliderSection>
         <sliderSection>
-            <input type="range" min="-10" max="10" value="0" class="slider" id="arm5"><br />
+            <input type="range" min="-10" max="10" value="0" class="slider" id="arm5" ng-model="arm5" ng-change="armChange()"><br />
             <strong>Arm 5</strong>
             <div class="number" id="arm5_val"></div>
         </sliderSection>
         <sliderSection>
-            <input type="range" min="-10" max="10" value="0" class="slider" id="arm6"><br />
+            <input type="range" min="-10" max="10" value="0" class="slider" id="arm6" ng-model="arm6" ng-change="armChange()"><br />
             <strong>Arm 6</strong>
             <div class="number" id="arm6_val"></div>
         </sliderSection>
         <sliderSection>
-            <input type="range" min="-10" max="10" value="0" class="slider" id="arm7"><br />
+            <input type="range" min="-10" max="10" value="0" class="slider" id="arm7" ng-model="arm7" ng-change="armChange()"><br />
             <strong>Arm 7</strong>
             <div class="number" id="arm7_val"></div>
         </sliderSection>
