--- a/templates/AINavigation.html
+++ b/templates/AINavigation.html
@@ -70,12 +70,7 @@
                 <input type="submit" ng-click="waypointNew()" value="Submit" id="submit-button"><br>
             </form>
         </enter-coord>
-
-        <form ng-submit="cameraIP()">
-            <!-- <input type="text" id="cameraIP" name="cameraIP" placeholder="Add Camera IP Address:">
-        <input type="submit" value="Submit" id="submit-button">-->
-        </form><div></div>
-
+        <div></div>
         <div id="go-button" ng-click="goButton()">GO</div>
         <notification-bar id="notification-bar"><div id="notices">{{ '{{notifications}}' }}</div></notification-bar>
         <div id="emergency-stop" ng-click="eStopButton()">STOP</div>
