--- a/templates/Cameras.html
+++ b/templates/Cameras.html
@@ -40,7 +40,7 @@
                     <td></td>
                 </tr>
                 <tr ng-repeat="ip in cameraIPs">
-                    <td>{{ '{{ip}}' }} &nbsp;&nbsp;</td>
+                    <td><a href="http://{{ '{{ip}}' }}" target="_blank">{{ '{{ip}}' }}</a> &nbsp;&nbsp;</td>
                 </tr>
                 
             </table>
