--- a/templates/AINavigation.html
+++ b/templates/AINavigation.html
@@ -38,7 +38,10 @@
                     <svg id="map" style="position:absolute;" width="100%" height="550px">
                        <div ng-repeat="point in waypoints" ng-attr-x="{{ '{{point.x_pos}}' }}" ng-attr-y="{{ '{{point.y_pos}}' }}" ng-attr-width="10" ng-attr-height="10" rx="10" ry="10" style="fill:red;stroke-width:2;stroke:rgb(255,0,0)">
                         <img ng-attr-id="{{ '{{point.index}}' }}" src="{{ url_for('static', filename='imgs/pin.svg') }}" width="1" height="1"><br>
+                       </div> 
 
+                       <div ng-model="roverPin" ng-attr-x="{{ '{{roverPin.x_pos}}' }}" ng-attr-y="{{ '{{roverPin.y_pos}}' }}" ng-attr-width="10" ng-attr-height="10" rx="10" ry="10">
+                        <img id="roverPin" src="{{ url_for('static', filename='imgs/rover.png') }}" width="1" height="1"><br>
                        </div> 
                     </svg>
                 </panzoom>
