--- a/templates/AINavigation.html
+++ b/templates/AINavigation.html
@@ -13,6 +13,7 @@
             border: 2px solid black;
         }
     </style>
+    <script src="/node_modules/angular/angular.js"></script>
     <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="http://monospaced.github.io/hamster.js/hamster.js"></script>
     <script src="https://code.angularjs.org/1.3.13/angular.min.js"></script>
