--- a/templates/Cameras.html
+++ b/templates/Cameras.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html ng-app="cameras">
 <head>
@@ -22,7 +22,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.js"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='controllers/Cameras.controller.js') }}"></script> 
+
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/X.Y.Z/angular-mocks.js"></script>
+    
+
+    <script type="text/javascript" src="{{ url_for('static', filename='controllers/Cameras.controller.js') }}"></script>
 </head>
 <body ng-controller="CamerasController">
     <div class="topnav">
