--- a/templates/AINavigation.html
+++ b/templates/AINavigation.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet"
           href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/UIStyleSheet.css') }}">
-    <link rel = "stylesheet" href="{{ url_for('static', filename='css/panzoomwidget.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/panzoomwidget.css') }}">
     <style type="text/css">
         .pan-zoom-frame {
             border: 2px solid black;
@@ -17,7 +17,7 @@
     <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="http://monospaced.github.io/hamster.js/hamster.js"></script>
     <script src="https://code.angularjs.org/1.3.13/angular.min.js"></script>
-    <script src="http://monospaced.github.io/angular-mousewheel/mousewheel.js"></script>
+    <script src="http://monospaced.github.io/angular-mousewheel/mousewheel.js"></script
 
     <script type="text/javascript" src="{{ url_for('static', filename='directives/panzoom.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='services/PanZoomService.js') }}"></script>
