--- a/templates/AINavigation.html
+++ b/templates/AINavigation.html
@@ -17,7 +17,7 @@
     <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="http://monospaced.github.io/hamster.js/hamster.js"></script>
     <script src="https://code.angularjs.org/1.3.13/angular.min.js"></script>
-    <script src="http://monospaced.github.io/angular-mousewheel/mousewheel.js"></script
+    <script src="http://monospaced.github.io/angular-mousewheel/mousewheel.js"></script>
 
     <script type="text/javascript" src="{{ url_for('static', filename='directives/panzoom.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='services/PanZoomService.js') }}"></script>
