--- a/templates/ERDM.html
+++ b/templates/ERDM.html
@@ -75,16 +75,13 @@
         </coord-display>
         <enter-coord>
             <form>
-                <input type="text" id="waypointNewLongitude" pattern="^\d*(\.\d*)?$" name="waypointNew" placeholder="Enter New Longitude:"><br>
-                <input type="text" id="waypointNewLatitude" pattern="^\d*(\.\d*)?$" name="waypointNew" placeholder="Enter New Latitude:"><br>
+                <input type="number" id="waypointNewLongitude" ng-model="waypointNewLongitude" name="waypointNew" placeholder="Enter New Longitude:"><br>
+                <input type="number" id="waypointNewLatitude" ng-model="waypointNewLatitude" name="waypointNew" placeholder="Enter New Latitude:"><br>
                 <input type="submit" ng-click="waypointNew()" value="Submit" id="submit-button"><br>
             </form>
         </enter-coord>
-        
-        <form ng-submit="cameraIP()">
-            <!--<input type="text" id="cameraIP" name="cameraIP" placeholder="Add Camera IP Address:">
-        <input type="submit" value="Submit" id="submit-button">-->
-        </form><div></div>
+       
+        <div></div>
         
         <div></div>
         <notification-bar id="notification-bar"><div id="notices">{{ '{{notifications}}' }}</div></notification-bar>
