--- a/templates/ERDM.html
+++ b/templates/ERDM.html
@@ -63,7 +63,7 @@
                 <tr>
                     <th>Target coordinates</th>
                     <!--<th>Distance</th>-->
-                    <th><input type="button" ng-click="deleteLatestWaypoint()" value="Delete Latest Waypoint"></th>
+                    <th><input type="button" ng-click="deleteEarliestWaypoint()" value="Delete Latest Waypoint"></th>
                 </tr>
 
                 <tr ng-repeat="waypoint in waypoints">
